mypocs/virtualservice/virtualservice-coveo-wrapper.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: coveo-wrapper
  namespace: app-dev
spec:
  awsName: coveo-wrapper.app-dev.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: coveo-wrapper-api
    #virtualRouter:
    #  virtualRouterRef:
    #    name: coveo-wrapper
---
apiVersion: v1
kind: Service
metadata:
  name: coveo-wrapper
  namespace: app-dev
spec:
  ports:
    - port: 8080
      name: http
